--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,28 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+  
+  <!-- Firebase Configuration -->
+  <script>
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyCyeuG3cUnszLZfbgDBlYGkICAOUbOxcZg",
+      authDomain: "belajar-web-flutter.firebaseapp.com",
+      projectId: "belajar-web-flutter",
+      storageBucket: "belajar-web-flutter.firebasestorage.app",
+      messagingSenderId: "103422751641",
+      appId: "1:103422751641:web:8df499583d514b1164d908"
+    };
+    
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const app = initializeApp(firebaseConfig);
+  </script>
+  
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
